# chaos_analyser

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/2020-03-30-040825_summoners/: up.sql
migrations/2020-04-02-203734_summoners/: down.sql  up.sql
migrations/2020-04-02-224856_summoners/: down.sql  up.sql
migrations/2020-04-04-103356_alpha/: down.sql  up.sql
src/: api_urls.rs  config.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  riot_api.rs  schema.rs  states.rs
src/db/: mod.rs  summoner.rs  summoner_rankeds.rs
src/endpoints/: mod.rs  rest.rs  riot.rs
src/endpoints/riot/: api_endpoints.rs  mod.rs  summoner.rs
src/handlers/api/: db_api.rs  mod.rs  riot_api.rs
src/handlers/views/: db_view.rs  mod.rs  riot_view.rs
src/models/riot/: matches.rs  mod.rs  spectator.rs  summoner.rs
src/riot/api/: mod.rs  summoner.rs
src/types/: region.rs
templates/: summoner.html
templates/structure/: base.html
templates/views/: db_summoner.html  riot_summoner.html
