[package]
name = "chaos_analyser"
version = "0.1.0"
authors = ["sebastian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
tera = "1.2.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = {version = "1.0.105", features = ["derive"]}
reqwest = "0.10.4"
chrono = "0.4.11"
config = "0.10.1"