[package]
name = "chaotic-analyser"
version = "0.2.0"
authors = ["sebastian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-cors = "0.5.0"
tera = "1.2.0"
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
futures = "0.3.7"
dotenv = "0.15.0"
serde = "1.0.117"
serde_json = "1.0.59"
serde_qs = "0.7.0"
chrono = { version = "0.4.15", features = ["serde"] }
config = "0.10.1"
